Resouce Service refactoring and minor bug fixes