@@ -1,7 +1,6 @@
 package com.intellidesk.cognitia.userandauth.security;
 
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.io.InputStream;
 import java.security.KeyFactory;
 import java.security.PrivateKey;
 import java.security.PublicKey;
@@ -9,36 +8,43 @@ import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
 import java.util.Base64;
 
+import org.springframework.core.io.ResourceLoader;
+
 public class PemUtils {
 
-    public static PrivateKey loadPrivateKey(String filename) {
-        try {
-            String key = new String(Files.readAllBytes(Paths.get(filename)))
+    private final ResourceLoader resourceLoader;
+
+    public PemUtils(ResourceLoader resourceLoader) {
+        this.resourceLoader = resourceLoader;
+    }
+
+    public PrivateKey loadPrivateKey(String location) {
+        try (InputStream is = resourceLoader.getResource(location).getInputStream()) {
+            String key = new String(is.readAllBytes())
                     .replaceAll("-----BEGIN (.*)-----", "")
                     .replaceAll("-----END (.*)-----", "")
                     .replaceAll("\\s", "");
+
             byte[] decoded = Base64.getDecoder().decode(key);
-            PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(decoded);
-            KeyFactory kf = KeyFactory.getInstance("RSA");
-            return kf.generatePrivate(keySpec);
+            PKCS8EncodedKeySpec spec = new PKCS8EncodedKeySpec(decoded);
+            return KeyFactory.getInstance("RSA").generatePrivate(spec);
         } catch (Exception e) {
-            throw new RuntimeException("Failed to load private key: " + filename, e);
+            throw new RuntimeException("Failed to load private key from " + location, e);
         }
     }
 
-    public static PublicKey loadPublicKey(String filename) {
-        try {
-            String key = new String(Files.readAllBytes(Paths.get(filename)))
+    public PublicKey loadPublicKey(String location) {
+        try (InputStream is = resourceLoader.getResource(location).getInputStream()) {
+            String key = new String(is.readAllBytes())
                     .replaceAll("-----BEGIN (.*)-----", "")
                     .replaceAll("-----END (.*)-----", "")
                     .replaceAll("\\s", "");
+
             byte[] decoded = Base64.getDecoder().decode(key);
-            X509EncodedKeySpec keySpec = new X509EncodedKeySpec(decoded);
-            KeyFactory kf = KeyFactory.getInstance("RSA");
-            return kf.generatePublic(keySpec);
+            X509EncodedKeySpec spec = new X509EncodedKeySpec(decoded);
+            return KeyFactory.getInstance("RSA").generatePublic(spec);
         } catch (Exception e) {
-            throw new RuntimeException("Failed to load public key: " + filename, e);
+            throw new RuntimeException("Failed to load public key from " + location, e);
         }
     }
 }
-
